--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,150 @@
+body {
+  background-color: #152c5c;
+}
+
 .App {
   text-align: center;
+  max-width: 728px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App header {
+  background-color: rgb(40, 37, 53);
+  height: 10vh;
+  min-height: 50px;
+  color: white;
+  position: fixed;
+  width: 100%;
+  max-width: 728px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 99;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App section {
+  /*display: flex;
+  flex-direction: column;
+  justify-content: center;*/
+  padding-top: 70px;
+  min-height: 90vh;
+  background-color: rgb(40, 37, 53);
+  color: white;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  padding: 10px;
+  height: 80vh;
+  margin: 10vh 0 10vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+main::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+main::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+main::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
+
+/*form {
+  height: 10vh;
+  position: fixed;
+  bottom: 0;
+  background-color: rgb(24, 23, 23);
+  width: 100%;
+  max-width: 728px;
+  display: flex;
+  font-size: 1.5rem;
+}
+
+form button {
+  width: 20%;
+  background-color: rgb(56, 56, 143);
+}
+
+
+input {
+  line-height: 1.5;
+  width: 100%;
+  font-size: 1.5rem;
+  background: rgb(58, 58, 58);
+  color: white;
+  outline: none;
+  border: none;
+  padding: 0 10px;
+}*/
+
+h1 {
+  margin: 0;
+}
+
+.todo-item {
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+  padding-top: 2px;
+}
+
+.priority {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+form {
+  padding: 1rem;
+  border-radius: 4px;
+  box-shadow: inset 0 2px 4px #ddd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form div {
+  margin-bottom: 0.5rem;
+}
+
+form label {
+  display: block;
+}
+
+button {
+  background-color: #033292;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 1.25rem;
+  border-radius: 8px;
+  align-self: center;
+  height: fit-content;
+}
+
+p {
+  margin: 0;
+  width: 60%;
+  text-align: left;
+}
+
+.newItem {
+  display: flex;
+  justify-content: space-evenly;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: -webkit-fill-available;
+}
+
+.escapeBtn {
+  padding: revert;
+  background-color: red;
 }
